--- a/Lab_HW_1_Writeup.Rmd
+++ b/Lab_HW_1_Writeup.Rmd
@@ -2,7 +2,9 @@
 title: "Lab HW 1 Writeup"
 author: "Christopher Carbonaro"
 date: "9/9/2019"
-output: word_document
+output:
+  pdf_document: default
+  word_document: default
 ---
 # 1. Reading in a Dataset
 
@@ -215,3 +217,4 @@ correlations <- house_sub_comp %>%
   cor() %>%
   corrplot.mixed(tl.cex = 0.5)
 ```
+
